# archidoc_sds

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
archidoc/: .env.template  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
document/: models.py  urls.py  views.py
document/migrations/: 0001_initial.py  0002_auto_20230705_1300.py  0003_document_examen.py  0004_auto_20230719_1137.py  0005_alter_document_id.py
etudiant/: models.py  urls.py  views.py
etudiant/migrations/: 0001_initial.py  0002_alter_etudiant_id.py
manageuser/: urls.py  views.py
parametres/: models.py  urls.py  views.py
parametres/migrations/: 0001_initial.py  0002_auto_20230705_1300.py  0003_alter_annee_academique_id_alter_examen_id_and_more.py
static/css/: personal_css.css
templates/: index.html
templates/Document/: details.html  form.html  index.html  search.html
templates/Etudiant/: details.html  form.html  index.html
templates/annee_academique/: Update.html  form.html  index.html  list_annee_academique.html
templates/annee_academique/Document/: form.html  index.html
templates/examen/: form.html  index.html
templates/filiere/: form.html  index.html
templates/layouts/: Layout.html  LayoutConnexion.html
templates/niveau/: form.html  index.html
templates/registration/: base.html  list.html  login.html  register.html  set_profil_form.html  success.html
templates/session/: form.html  index.html
templates/type/: form.html  index.html
