[tool.poetry]
name = "sds"
version = "0.0.1"
description = ""
authors = ["Muhammed Zeba <parice02@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.4"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
tabula = "^1.0.5"
pdfquery = "^0.4.3"
django-environ = "^0.10.0"
pypdf2 = "^3.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
